# tsubasa

./: CMakeLists.txt  Toolchain-nec.cmake  build_nec.cpp
src/: CMakeLists.txt
src/dbops/: avx.cpp  selection.cpp  sh_mem.cpp  veo_host.c  veo_kernel.c
src/experiments/: CMakeLists.txt
src/experiments/BenchmarkFramework/datagen/: BinomialDistribution.cpp  BinomialDistribution.h  ComplexDataGenerator.cpp  ComplexDataGenerator.h  CompositeDistribution.cpp  CompositeDistribution.h  ConstantDistribution.cpp  ConstantDistribution.h  DataGenerator.h  RandomDistribution.h  UniformDistributionBw.cpp  UniformDistributionBw.h
src/experiments/BenchmarkFramework/general/: VariationSubject.h  buffers.cpp  buffers.h  utils.cpp  utils.h
src/experiments/algorithms/: algorithm.cpp  algorithm.h
src/experiments/algorithms/compression/logical/: delta.cpp
src/experiments/algorithms/compression/physical/: bitpacking_experiment.cpp
src/experiments/datastructures/common/: bitweaving_h_store_experiment.cpp  process.R
src/experiments/datastructures/set/: hash_set_experiment.cpp  process.R
src/experiments/general_io/trimmed_ramometer/: Makefile  README.txt  build.sh  exp.sh  ramometer.cpp  ramometer_autovec.L  simdabstraction.h  stopwatch.h  tasks.h  tramometer_ncc.h  utils.h
src/experiments/general_io/trimmed_ramometer/non_optimal_usage/: build.sh  generator.py  process.R
src/main/algorithms/: algorithm.cpp  algorithm.h
src/main/algorithms/compression/: compression.h
src/main/algorithms/compression/logical/: delta.h  for.h  rle.h
src/main/algorithms/compression/physical/: bitpacking.h  bitpacking_generator.cpp  bitpacking_impl.h
src/main/algorithms/hash/: murmur3.h
src/main/datastructures/common/: bitweaving_h_store.h
src/main/datastructures/set/: hash_set.h
src/main/utils/: asm_utils.h  clock.h  literals.h  threading.h  vector.h
src/test/: test_utils.h
src/test/datastructures/common/: bitweaving_h_store_test.cpp
src/test/datastructures/set/: hash_set_test.cpp
